--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.facebook.rebound:rebound:0.3.7'
     testCompile 'junit:junit:4.12'
-    //compile project (':Library-BoheScrollView')
+    compile project (':Library-BoheScrollView')
 }
